Added tests for OAuth2 and 3rd Party API